applications/previwe-website/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: website
  name: website
